--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-react": "^1.1.7",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.13.0",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "1.17.1",
     "style-loader": "^0.23.1",
